# RediSearch

./: CMakeLists.txt  Makefile  build.sh  commands.json  developer.md
docs/: OPTIMIZATION_PROJECT_STATUS.md  PERFORMANCE_TEST_GUIDE.md  QUERY_CACHE_PHASE2_DESIGN.md  SQL_SEMANTIC_LAYER_DESIGN.md  SQL_TEST_GUIDE.md
docs/commands/: FT.SQL.md
src/: commands.h  config.c  config.h  document.c  field_spec.c  field_spec.h  module.c  query_cache_helpers.c  query_cache_helpers.h  query_cache_integration.c  query_cache_integration.h  redis_index.c  spec.c  spec.h  sql_command.c  sql_command.h
src/aggregate/: aggregate.h  aggregate_exec.c  aggregate_exec_common.c  aggregate_exec_common.h  aggregate_request.c
src/command_info/: command_info.c  command_info.h
src/coord/: info_command.c
src/fork_gc/: fork_gc.c
src/hybrid/: hybrid_exec.c
src/redisearch_rs/bloom_filter/: Cargo.toml
src/redisearch_rs/bloom_filter/src/: lib.rs
src/redisearch_rs/c_entrypoint/bloom_filter_ffi/: Cargo.toml  build.rs  cbindgen.toml
src/redisearch_rs/c_entrypoint/bloom_filter_ffi/src/: lib.rs
src/redisearch_rs/sql_parser/: Cargo.toml
src/redisearch_rs/sql_parser/benches/: sql_translation.rs
src/redisearch_rs/sql_parser/src/: ast.rs  cache.rs  error.rs  lib.rs  parser.rs  translator.rs  validation.rs
src/redisearch_rs/sql_parser/src/parser/: aggregates.rs  aggregates_tests.rs  expressions.rs  expressions_tests.rs  mod.rs  options.rs  options_tests.rs  preprocessor.rs  preprocessor_tests.rs  select.rs  select_tests.rs
src/redisearch_rs/sql_parser/tests/: integration.rs
(+68 files in other folders)
