[package]
name = "bloom_filter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
workspace_hack.workspace = true
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
rand.workspace = true

