[package]
name = "sql_parser"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "sql_translation"
harness = false

[dependencies]
sqlparser.workspace = true
thiserror.workspace = true
workspace_hack.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
