[package]
name = "bloom_filter_ffi"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[build-dependencies]
cbindgen.workspace = true
build_utils = { path = "../../build_utils" }

[dependencies]
bloom_filter.workspace = true
libc.workspace = true
workspace_hack.workspace = true

[dev-dependencies]
redis_mock.workspace = true

[target.'cfg(miri)'.dependencies]
redis_mock.workspace = true

